install visualizer deps in CI
Signed-off-by: Thijs Baaijen <13253091+Thijss@users.noreply.github.com>

--- a/.github/workflows/build-test-and-sonar.yml
+++ b/.github/workflows/build-test-and-sonar.yml
@@ -84,7 +84,7 @@ jobs:
 
       - name: Install in develop mode
         run: |
-          pip install -e .[dev]
+          pip install -e .[dev,visualizer]
 
       - name: Test and Coverage
         run: |
