--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,10 @@ doc = [
   "readthedocs-sphinx-search",
   "sphinx-hoverxref",
   "numpydoc",
+  # Visualization (make sure these stay equalivalent to the 'visualizer' group)
+  "dash>=3.0.0",
+  "dash-bootstrap-components>=2.0.0",
+  "dash-cytoscape>=1.0.2",
 ]
 
 visualizer = [
