exclude visualizer from coverage
Signed-off-by: Thijs Baaijen <13253091+Thijss@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,6 +123,13 @@ disable_error_code = ["assignment", "import-untyped"]
 [tool.coverage.run]
 relative_files = true
 branch = true
+omit = [
+  "src/power_grid_model_ds/visualizer/*",
+]
+[tool.coverage.report]
+exclude_also = [
+  'if TYPE_CHECKING:',
+]
 
 [dependency-groups]
 visualizer = [
