--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,9 @@ jobs:
     permissions:
       contents: write
     with:
-      create_release: ${{ (github.event_name == 'workflow_dispatch' && inputs.create_release) || (github.event_name == 'push') }}
+      create_release: "true"
+      # ${{ (github.event_name == 'workflow_dispatch' && inputs.create_release) || (github.event_name == 'push') }}
+      # TODO(mgovers): revert back to original
 
   check-code-quality:
     uses: "./.github/workflows/check-code-quality.yml"
@@ -60,7 +62,8 @@ jobs:
       contents: write
       id-token: write  # Required for Trusted Publishing
     needs: build-test-release
-    if: (github.event_name == 'workflow_dispatch' && inputs.create_release) || github.event_name == 'push'
+    # if: (github.event_name == 'workflow_dispatch' && inputs.create_release) || github.event_name == 'push'
+    # TODO(mgovers): revert back to original
 
     steps:
       - name: Download assets from GitHub release
