--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
           # download the latest release
           latest: true
           # don't download pre-releases
-          preRelease: false
+          preRelease: true  # TODO(mgovers): revert back to false
           fileName: "*"
           # don't download GitHub-generated source tar and zip files
           tarBall: false
