--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,7 @@ jobs:
     permissions:
       contents: write
     with:
-      create_release: ${{ (github.event_name == 'workflow_dispatch' && inputs.create_release) || (github.event_name == 'push') || (github.event_name == 'pull_request') }}
-      # TODO(mgovers): revert back to original
+      create_release: ${{ (github.event_name == 'workflow_dispatch' && inputs.create_release) || (github.event_name == 'push') }}
 
   check-code-quality:
     uses: "./.github/workflows/check-code-quality.yml"
@@ -61,8 +60,7 @@ jobs:
       contents: write
       id-token: write  # Required for Trusted Publishing
     needs: build-test-release
-    # if: (github.event_name == 'workflow_dispatch' && inputs.create_release) || github.event_name == 'push'
-    # TODO(mgovers): revert back to original
+    if: (github.event_name == 'workflow_dispatch' && inputs.create_release) || github.event_name == 'push'
 
     steps:
       - name: Download assets from GitHub release
@@ -72,7 +70,7 @@ jobs:
           # download the latest release
           latest: true
           # don't download pre-releases
-          preRelease: true  # TODO(mgovers): revert back to false
+          preRelease: false
           fileName: "*"
           # don't download GitHub-generated source tar and zip files
           tarBall: false
@@ -81,14 +79,15 @@ jobs:
           out-file-path: assets-to-publish
           # don't extract downloaded files
           extract: false
+
       - name: List downloaded assets
         run: ls -la assets-to-publish
-      
+
       - name: Upload assets to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           # To test, use the TestPyPI:
-          repository-url: https://test.pypi.org/legacy/ # TODO(mgovers): revert back
+          # repository-url: https://test.pypi.org/legacy/
           # You must also create an account and project on TestPyPI,
           # as well as set the trusted-publisher in the project settings:
           # https://docs.pypi.org/trusted-publishers/adding-a-publisher/
