--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,13 +8,10 @@ name: CI Build
 on:
   push:
     branches:
-      - main
-  # run pipeline on pull request
+      - main  # run pipeline on pull request
   pull_request:
-  # run pipeline on merge queue
-  merge_group:
-  # run this workflow manually from the Actions tab
-  workflow_dispatch:
+  merge_group:  # run pipeline on merge queue
+  workflow_dispatch:  # run this workflow manually from the Actions tab
     inputs:
       create_release:
         type: boolean
@@ -91,7 +88,7 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           # To test, use the TestPyPI:
-          # repository-url: https://test.pypi.org/legacy/
+          repository-url: https://test.pypi.org/legacy/
           # You must also create an account and project on TestPyPI,
           # as well as set the trusted-publisher in the project settings:
           # https://docs.pypi.org/trusted-publishers/adding-a-publisher/
