sue value/description
Signed-off-by: Thijs Baaijen <13253091+Thijss@users.noreply.github.com>

--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -15,7 +15,9 @@ on:
         default: false
         required: false
       outputs:
-        tag: ${{ jobs.github-release.outputs.tag }}
+        tag:
+          description: "The created release tag"
+          value: ${{ jobs.github-release.outputs.tag }}
 
   # run this workflow manually from the Actions tab
   workflow_dispatch:
