disable test needs for now
Signed-off-by: Thijs Baaijen <13253091+Thijss@users.noreply.github.com>

--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -101,7 +101,7 @@ jobs:
   github-release:
     needs:
       - build-python
-      - tests
+#      - tests
     permissions:
       contents: write
     runs-on: ubuntu-latest
