--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -72,8 +72,7 @@ jobs:
     needs: build-python
     strategy:
       matrix:
-#        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        os: [ubuntu-latest]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
         python: ["3.11", "3.12", "3.13"]
       fail-fast: false
     runs-on: ${{ matrix.os }}
