--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ dependencies = [
 ]
 dynamic = ["version"]
 
-[project.optional-dependencies]
+[dependency-groups]
 pandas = ["pandas>=2.2.1"]
 dev = [
   "pylint>=3.1.0",
@@ -129,3 +129,38 @@ branch = true
 exclude_also = [
   'if TYPE_CHECKING:',
 ]
+
+[tool.poe.tasks.lint]
+help = "Lint code (with ruff)"
+# --no-fix does override --fix in ruff, if --check is given to poe.
+cmd = 'ruff check --fix --show-fixes ${check:+ --no-fix}'
+args=[{name = "check", type="boolean", help= "Does not correct files, only warns"}]
+
+[tool.poe.tasks.format]
+help = "Format code (with ruff)"
+cmd = 'ruff format ${check:+ --diff}'
+args=[{name = "check", type="boolean", help= "Does not correct files, only warns"}]
+
+[tool.poe.tasks.sort]
+help = "Sort imports (with ruff)"
+cmd = 'ruff check --select I --fix --show-fixes ${check:+ --no-fix}'
+args=[{name = "check", type="boolean", help= "Does not correct files, only warns"}]
+
+[tool.poe.tasks.tests]
+help = "Run tests"
+cmd = "pytest"
+
+[tool.poe.tasks.cover]
+help = "Run tests (and gather coverage)"
+cmd = "coverage run"
+
+[tool.poe.tasks.report]
+help = "Generate coverage report. Will use data from a previous cover command."
+sequence = [
+    {cmd="coverage report"},
+    {cmd="coverage report --fail-under 80 --omit='cheese'"}
+]
+
+[tool.poe.tasks.coverage]
+help = "Run coverage *and* generate report"
+sequence = ["cover", "report"]
