--- a/.github/workflows/check-code-quality.yml
+++ b/.github/workflows/check-code-quality.yml
@@ -8,6 +8,12 @@ name: Check Code Quality
 on:
   # run pipeline from another workflow
   workflow_call:
+    inputs:
+      update_dependencies:
+        type: boolean
+        description: Update dependencies to their latest version
+        default: false
+        required: false
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-code-quality
@@ -18,19 +24,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout source code
+        uses: actions/checkout@v5
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+        if: ${{ always() }}
         with:
-          python-version: 3.11
+          activate-environment: true
+          enable-cache: true
 
-      - name: Upgrade pip
-        run: pip install --upgrade pip
+      - name: install poe
+        run: uv tool install poethepoet
 
       - name: Install dependencies
-        run: pip install -e .[dev]
-      
-      - name: Run pre-commit on all files
-        run: pre-commit run --all-files
+        if: ${{ always() }}
+        run: uv sync --dev
+
+      - name: Update dependencies
+        if: ${{ inputs.update_dependencies }}
+        run: uv update
+
+      - name: Run Code Quality Checks & Tests
+        run: poe all --check
