--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,9 +13,15 @@ build:
   tools:
     python: "3.11"
   jobs:
+    pre_create_environment:
+      - asdf plugin add uv
+      - asdf install uv latest
+      - asdf global uv latest
+    create_environment:
+      - uv venv "${READTHEDOCS_VIRTUALENV_PATH}"
+    install:
+      - UV_PROJECT_ENVIRONMENT="${READTHEDOCS_VIRTUALENV_PATH}" uv sync --frozen --group doc
     post_install:
-      # Build package with doc requirements from pyproject.optional-dependencies
-      - pip install --verbose --editable .[doc]
       # download support
       - wget -P docs/release_and_support https://github.com/PowerGridModel/.github/raw/main/RELEASE.md
       - wget -P docs/release_and_support https://github.com/PowerGridModel/.github/raw/main/SUPPORT.md
