update github actions
Signed-off-by: Thijs Baaijen <13253091+Thijss@users.noreply.github.com>

--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -104,7 +104,7 @@ jobs:
       - name: Install built wheel file
         run: uv pip install power-grid-model-ds[dev]==${{ needs.build-python.outputs.version }} --find-links=dist
 
-      - name: Run Code Quality Checks & Tests
+      - name: Run All Code Quality Checks & Tests
         run: poe all --check
       
 
