--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -47,7 +47,7 @@ jobs:
     
       - name: Install dependencies
         if: ${{ always() }}
-        run: uv sync
+        run: uv sync --frozen
 
       - name: Update dependencies
         if: ${{ inputs.update_dependencies }}
