add --frozen to sonar workflow
Signed-off-by: Thijs Baaijen <13253091+Thijss@users.noreply.github.com>

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Install dependencies
         if: ${{ always() }}
-        run: uv sync --dev
+        run: uv sync --frozen --dev
 
       - name: Test and Coverage
         run: |
