--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,38 +3,12 @@
 # SPDX-License-Identifier: MPL-2.0
 
 repos:
-  - repo: https://github.com/fsfe/reuse-tool
-    rev: v4.0.3
-    hooks:
-      - id: reuse
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    # Ruff version.
-    rev: v0.8.2
-    hooks:
-      # Run the linter.
-      - id: ruff
-        args: [ --fix ]
-      # Run the formatter.
-      - id: ruff-format
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.11.2
-    hooks:
-      - id: mypy
-        additional_dependencies: [numpy, pandas]
   - repo: local
     hooks:
-      - id: pylint
-        name: pylint
-        entry: pylint
-        files: ^src/.+\.py$
+      - id: quality-checks
+        name: Running 'poe all --check'
+        entry: poe all --check
         language: system
-        types: [ python ]
-        args: [ "--rcfile=pyproject.toml" ]
-        require_serial: true
-      - id: pytest
-        name: pytest
-        entry: pytest
-        language: system
-        pass_filenames: false
+        types: [python]
         always_run: true
-        args: []
+        pass_filenames: false
