--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,24 +34,27 @@ dependencies = [
 dynamic = ["version"]
 
 [project.optional-dependencies]
-pandas = ["pandas>=2.2.1"]
-dev = [
-  "pylint>=3.1.0",
-  "pytest>=8.1.1",
-  "coverage>=7.4.4",
-  "black>=24.3.0",
-  "ruff>=0.3.5",
-  "isort>=5.13.2",
-  "mypy>=1.9.0",
-  "pre-commit>=4",
-  # Visualization (make sure these stay equalivalent to the 'visualizer' group)
-  "dash>=3.0.0",
-  "dash-bootstrap-components>=2.0.3",
-  "dash-cytoscape>=1.0.2",
-]
+# Published optional dependencies, or "extras".
 
 visualizer = [
   # Visualization (make sure these are also updated in the 'dev' group)
+  "dash>=3.0.0",
+  "dash-bootstrap-components>=2.0.0",
+  "dash-cytoscape>=1.0.2",
+]
+pandas = ["pandas>=2.2.1"]
+
+[dependency-groups]
+# Local dependencies for development.
+
+dev = [
+  "pylint",
+  "pytest",
+  "coverage",
+  "ruff",
+  "mypy",
+  "pre-commit",
+  # Visualization (make sure these stay equalivalent to the 'visualizer' group)
   "dash>=3.0.0",
   "dash-bootstrap-components>=2.0.0",
   "dash-cytoscape>=1.0.2",
@@ -65,7 +68,6 @@ doc = [
   "sphinx-hoverxref",
   "numpydoc",
 ]
-
 
 [project.urls]
 Home-page = "https://lfenergy.org/projects/power-grid-model/"
@@ -123,9 +125,66 @@ disable_error_code = ["assignment", "import-untyped"]
 
 [tool.coverage.run]
 relative_files = true
-branch = true
+source = ["src"]
+command_line = '--module pytest'
 
 [tool.coverage.report]
+fail_under = 90
 exclude_also = [
   'if TYPE_CHECKING:',
 ]
+
+[tool.poe.tasks.all]
+help = "Run all CI calls"
+control.expr = "check"
+args = [{name = "check", type="boolean", help= "Does not correct files, only warns"}]
+  [[tool.poe.tasks.all.switch]]
+  case     = "True"
+  sequence = ["lint --check", "format --check", "lock", "type", "cover", "report"]
+
+  [[tool.poe.tasks.all.switch]]
+  sequence = ["lint", "format", "lock", "type", "cover", "report"]
+
+
+[tool.poe.tasks.lint]
+help = "Lint code (with ruff & pylint)"
+# --no-fix does override --fix in ruff, if --check is given to poe.
+sequence = [
+  {cmd='ruff check --fix --show-fixes ${check:+ --no-fix}'},
+  {cmd="pylint src"},
+]
+args=[{name = "check", type="boolean", help= "Does not correct files, only warns"}]
+
+[tool.poe.tasks.format]
+help = "Format code (with ruff)"
+cmd = 'ruff format ${check:+ --diff}'
+args=[{name = "check", type="boolean", help= "Does not correct files, only warns"}]
+
+[tool.poe.tasks.sort]
+help = "Sort imports (with ruff)"
+cmd = 'ruff check --select I --fix --show-fixes ${check:+ --no-fix}'
+args=[{name = "check", type="boolean", help= "Does not correct files, only warns"}]
+
+[tool.poe.tasks.type]
+help = "Type check code (with mypy)"
+cmd = "mypy src tests"
+
+[tool.poe.tasks.tests]
+help = "Run tests"
+cmd = "pytest"
+
+[tool.poe.tasks.lock]
+help = "Asserts that dependencies are locked"
+cmd = "uv lock --check"
+
+[tool.poe.tasks.cover]
+help = "Run tests (and gather coverage)"
+cmd = "coverage run"
+
+[tool.poe.tasks.report]
+help = "Generate coverage report. Will use data from a previous cover command."
+cmd = "coverage report"
+
+[tool.poe.tasks.coverage]
+help = "Run coverage *and* generate report"
+sequence = ["cover", "report"]
