--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
     uses: "./.github/workflows/build-test-release.yml"
     permissions:
       contents: write
+      id-token: write  # Required for Trusted Publishing
     with:
       create_release: ${{ inputs.create_release }}
 
