--- a/.github/workflows/check-code-quality.yml
+++ b/.github/workflows/check-code-quality.yml
@@ -22,7 +22,9 @@ concurrency:
 jobs:
   check-code-quality:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        python-version: ["3.11", "3.12", "3.13"]
     steps:
       - name: Checkout source code
         uses: actions/checkout@v5
@@ -33,6 +35,7 @@ jobs:
         with:
           activate-environment: true
           enable-cache: true
+          python-version: ${{ matrix.python-version }}
 
       - name: install poe
         if: ${{ always() }}
