exclude visualizer from test coverage in SonarCloud
Signed-off-by: Thijs Baaijen <13253091+Thijss@users.noreply.github.com>

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,3 +11,4 @@ sonar.tests=tests
 sonar.sourceEncoding=UTF-8
 sonar.python.version=3
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.coverage.exclusions=src/power_grid_model_ds/_core/visualizer/*
