--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
   "Operating System :: MacOS",
   "Topic :: Scientific/Engineering :: Physics",
 ]
-requires-python = ">=3.12"
+requires-python = ">=3.11,<3.15"
 dependencies = [
     "power-grid-model>=1.7",
     "rustworkx>= 0.15.1",
