--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
   "Operating System :: MacOS",
   "Topic :: Scientific/Engineering :: Physics",
 ]
-requires-python = ">=3.11,<3.14"
+requires-python = ">=3.11"
 dependencies = [
     "power-grid-model>=1.7",
     "rustworkx>= 0.15.1",
@@ -54,6 +54,7 @@ dev = [
   "ruff",
   "mypy",
   "pre-commit",
+  "poethepoet",
   # Visualization (make sure these stay equalivalent to the 'visualizer' group)
   "dash>=3.0.0",
   "dash-bootstrap-components>=2.0.0",
